--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ highlighter: pygments
 paginate: 15
 paginate_path: "/blog/page:num/"
 
+gems:
+  - octopress-paginate
 
 collections:
   portfolio:
