--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ markdown: kramdown
 highlighter: pygments
 
 # Pagination
-paginate: 6
-paginate_path: "/blog/page:num/"
+paginate: 5
+paginate_path: "/portfolio/page:num/"
 
 gems:
   - octopress-paginate
